tests/fixtures/invalid/pow_dict_none_float.py
# Cannot call pow() with Dict[str, int], None, Float
x = pow({"a": 1}, None, 1.0)
